<resources>
    <string name="app_name">CloudMe</string>
    <string name="enter">Enter</string>
    <string name="hello">hello</string>
    <string name="welcome_message">Welcome to our app!</string>
    <string name="continue_message">Continue</string>
    <string name="search_city">Search city</string>
    <string name="search_weather">Search Weather</string>
    <string name="result">Result</string>
    <string name="_21_02_2010">21.02.2010</string>
    <string name="ternopil">Ternopil</string>
    <string name="_21_00_pm">21:00 PM</string>
    <string name="_21_u2103">21 ℃</string>
    <string name="_75">75%</string>
    <string name="_750_mm">750 mm</string>
    <string name="success">SUCCESS</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="city_is_not_found">City is not found</string>
    <string name="city_is_found">City is found</string>
    <string name="weather_is_not_found">Weather is not found</string>
    <string name="weather_is_found">Weather is found</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="rain">Rain:</string>
    <string name="cloudinary">Cloudinary:</string>
</resources>
