<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_activity_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ternopil"
            android:textColor="@color/buttonColor"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:text="@string/date"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView"
            app:layout_constraintRight_toLeftOf="@id/dateTextView"/>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_21_02_2010"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView"
            />

        <TextView
            android:id="@+id/timeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/time"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView"
            app:layout_constraintRight_toLeftOf="@id/timeTextView"/>

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21_00_pm"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <TextView
            android:id="@+id/temperatureLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="8dp"
            android:text="@string/temperature"
            android:textColor="@color/buttonColor"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/timeTextView"
            app:layout_constraintRight_toLeftOf="@id/temperatureTextView" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/_21_u2103"
            android:textColor="@color/buttonColor"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_75"
            android:textColor="@color/buttonColor"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_750_mm"
            android:textColor="@color/buttonColor"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

        <TextView
            android:id="@+id/windSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.1 m/sec"
            android:textColor="@color/buttonColor"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

        <ImageView
            android:id="@+id/cloudinaryImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedTextView" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

