<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="50dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/homeActivityHeadConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/searchCityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColor"
            app:layout_constraintRight_toLeftOf="@+id/homeActivityProgressBar"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/homeActivityProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="12dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/searchCityEditText" />

        <ImageView
            android:id="@+id/checkImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/check"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/searchCityEditText" />

        <ImageView
            android:id="@+id/errorImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/error"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/searchCityEditText" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/homeActivityHeadConstraintLayout">

        <TextView
            android:id="@+id/resultMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/buttonColor"
            android:textSize="22sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/searchCityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="4"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/errorHomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_is_not_found"
            android:textColor="@color/primaryErrorColor"
            android:textSize="22sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/searchCityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="4"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/searchCityButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/search_city"
            android:textColor="@color/buttonColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/searchWeatherButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:text="@string/search_weather"
            android:textColor="@color/buttonColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCityButton" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>